opam-version: "2.0"
name: "plebeia"
version: "1.0.0"
authors: "Jun Furuse"
maintainer: "jun.furuse@gmail.com"
synopsis: "Plebeia"
license: "MIT"
homepage: "https://github.com/camlspotter/plebeia/"
bug-reports: "https://github.com/camlspotter/plebeia/"
dev-repo: "git://https://github.com/camlspotter/plebeia/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "blake2"
  "cstruct"
  "stdint"
  "res"
  "dune" {build & >= "1.0"}
]
