(executables
 (names segment_encoding test_api storage chunk test_roots)
 (libraries plebeia))

(alias
 (name test_api)
 (deps test_api.exe)
 (action (run ./test_api.exe)))
  
(alias
 (name test_roots)
 (deps test_roots.exe)
 (action (run ./test_roots.exe)))
  
(alias
 (name test_segment_encoding)
 (deps segment_encoding.exe)
 (action (run ./segment_encoding.exe)))
  
(alias
 (name test_storage)
 (deps storage.exe)
 (action (run ./storage.exe)))
  
(alias
 (name test_chunk)
 (deps chunk.exe)
 (action (run ./chunk.exe)))
  
(alias
 (name runtest)
 (deps (alias test_segment_encoding)
       (alias test_api)
       (alias test_storage)
       (alias test_chunk)
       (alias test_roots)
       ))
