(executables
 (names test_segment_encoding test_api test_storage test_chunk test_roots test_key test_subtree test_copy test_extender)
 (libraries plebeia))

(alias
 (name test_api)
 (deps test_api.exe)
 (action (run ./test_api.exe)))
  
(alias
 (name test_roots)
 (deps test_roots.exe)
 (action (run ./test_roots.exe)))
  
(alias
 (name test_segment_encoding)
 (deps test_segment_encoding.exe)
 (action (run ./test_segment_encoding.exe)))
  
(alias
 (name test_storage)
 (deps test_storage.exe)
 (action (run ./test_storage.exe)))
  
(alias
 (name test_chunk)
 (deps test_chunk.exe)
 (action (run ./test_chunk.exe)))
  
(alias
 (name test_key)
 (deps test_key.exe)
 (action (run ./test_key.exe)))
  
(alias
 (name test_subtree)
 (deps test_subtree.exe)
 (action (run ./test_subtree.exe)))
  
(alias
 (name test_copy)
 (deps test_copy.exe)
 (action (run ./test_copy.exe)))
  
(alias
 (name test_extender)
 (deps test_extender.exe)
 (action (run ./test_extender.exe)))
  
(alias
 (name runtest)
 (deps (alias test_segment_encoding)
       (alias test_api)
       (alias test_storage)
       (alias test_chunk)
       (alias test_roots)
       (alias test_key)
       (alias test_subtree)
       (alias test_copy)
       (alias test_extender)
       ))
